# market-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  Untitled  codex的话.md  config.toml  extensions_config.example.json  一些东西.md  需求说明.md
backend/: .gitignore
market-analyst/: .gitignore  dashboard.py  main.py  pyproject.toml
market-analyst/config/: portfolio.yaml
market-analyst/market_analyst/: main.py  mcp_server.py  schemas.py  schemas_retail.py
market-analyst/market_analyst/collectors/: earnings_collector.py  stock_collector.py
market-analyst/market_analyst/processors/: action_signal_generator.py  capital_flow_detector.py  earnings_analyzer.py  stock_characterizer.py  stock_diagnostor.py  strategy_matcher.py  trade_signal_generator.py
market-analyst/market_analyst/providers/: tvscreener_provider.py
market-analyst/market_analyst/utils/: cache.py
market-analyst/scripts/tvscreener/: custom_query.py  discover_fields.py  query_symbol.py
market-analyst/tests/: conftest.py  test_action_signal_generator.py  test_anomaly_detector.py  test_capital_flow_detector.py  test_earnings_analyzer.py  test_earnings_collector.py  test_enhanced_characterize_stock.py  test_mcp_server.py  test_momentum_scanner.py  test_portfolio_advisor.py  test_quant_metrics.py  test_schemas.py  test_schemas_retail.py  test_stock_characterizer.py  test_stock_collector.py  test_stock_diagnostor.py  test_strategy_matcher.py  test_strength_calculator.py  test_trade_signal_generator.py  test_tvscreener_provider.py
scripts/: run-frontend-service.sh  run-gateway-service.sh  (+1 more)
(+9 files in other folders)
